--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,45 @@
-<!-- NG-ZORRO -->
-<a href="https://github.com/NG-ZORRO/ng-zorro-antd" target="_blank" style="display: flex;align-items: center;justify-content: center;height: 100%;width: 100%;">
-  <img height="300" src="https://img.alicdn.com/tfs/TB1X.qJJgHqK1RjSZFgXXa7JXXa-89-131.svg">
-</a>
+<div id="app">
+  <nz-layout class="layout">
+    <nz-header class="header">
+      <div class="wrap">
+        <div class="left">
+          <h1>Music</h1>
+          <ul nz-menu nzTheme="dark" nzMode="horizontal">
+            <li nz-menu-item>发现</li>
+            <li nz-menu-item>歌单</li>
+          </ul>
+        </div>
+        <div class="right">
+          <div class="search">
+            <nz-input-group [nzSuffix]="suffixIconSearch">
+              <input type="text" nz-input placeholder="歌单/歌手/歌曲" />
+            </nz-input-group>
+            <ng-template #suffixIconSearch>
+              <i nz-icon nzType="search"></i>
+            </ng-template>
+          </div>
+          <div class="member">
+            <div class="no-login">
+              <ul nz-menu nzTheme="dark" nzMode="horizontal">
+                <li nz-submenu>
+                  <div title>
+                    <span>登陆</span>
+                    <i nz-icon type="down" nzTheme="outline"></i>
+                  </div>
+                  <ul>
+                    <li nz-menu-item>
+                      <i nz-icon type="mobile" nzTheme="outline"></i> 手机登陆
+                    </li>
+                    <li nz-menu-item>
+                      <i nz-icon type="user-add" nzTheme="outline"></i> 注册
+                    </li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </nz-header>
+  </nz-layout>
+</div>
