完成轮播组件

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,5 +41,11 @@
         </div>
       </div>
     </nz-header>
+    <nz-content class="content">
+      <router-outlet></router-outlet>
+    </nz-content>
+    <nz-footer class="footer">
+      Ant Design ©2020 Implement By Angular
+    </nz-footer>
   </nz-layout>
 </div>
