--- a/src/app/pages/home/home.component.less
+++ b/src/app/pages/home/home.component.less
@@ -29,6 +29,7 @@
               align-items: flex-end;
               h2 {
                 font-size: @font-size-lgs;
+                margin-bottom: -3px;
                 a:hover {
                   text-decoration: inherit;
                 }
