--- a/src/app/shared/ne-ui/ne-player/ne-player.component.html
+++ b/src/app/shared/ne-ui/ne-player/ne-player.component.html
@@ -30,7 +30,10 @@
         </div>
         <div class="bar">
           <div class="slider-wrap">
-            <app-ne-slider></app-ne-slider>
+            <app-ne-slider
+              [bufferOffset]="bufferOffset"
+              [(ngModel)]="sliderValue"
+            ></app-ne-slider>
           </div>
           <span class="time">02:11 / 04:55</span>
         </div>
@@ -45,6 +48,9 @@
         <p class="open">
           <span></span>
         </p>
+        <div class="control-vol">
+          <app-ne-slider [neVertical]="true"></app-ne-slider>
+        </div>
       </div>
     </div>
   </div>
