--- a/src/app/shared/ne-ui/ne-slider/ne-slider.component.less
+++ b/src/app/shared/ne-ui/ne-slider/ne-slider.component.less
@@ -1,10 +1,13 @@
 @import "../../../../assets/styles/mixins";
+// @import "../../../../assets/images";
+
 .ne-slider {
   height: 9px;
   color: rgba(0, 0, 0, 0.65);
   font-size: 14px;
   position: relative;
-  background: url("../../../../assets/images/statbar.png") right 0;
+  background: url("https://s2.music.126.net/style/web2/img/frame/statbar.png?fe9bf6f2a8cee166bf1b2ea588744650")
+    right 0;
   cursor: pointer;
 
   .ne-slider-track {
@@ -12,7 +15,8 @@
     left: 0;
     width: 0;
     height: 100%;
-    background: url("../../../../assets/images/statbar.png") left -66px;
+    background: url("https://s2.music.126.net/style/web2/img/frame/statbar.png?fe9bf6f2a8cee166bf1b2ea588744650")
+      left -66px;
     &.buffer {
       background-position: right -30px;
     }
@@ -26,7 +30,7 @@
     background-position: 0 -250px;
   }
 
-  /* ´¹Ö± */
+  /* ï¿½ï¿½Ö± */
   &.ne-slider-vertical {
     width: 4px;
     height: 100%;
