--- a/src/app/shared/ne-ui/ne-player/ne-player.component.less
+++ b/src/app/shared/ne-ui/ne-player/ne-player.component.less
@@ -14,7 +14,7 @@
   }
   .lock {
     position: relative;
-    z-index: 1;
+    z-index: -1;
     .left {
       position: absolute;
       top: -5px;
@@ -38,14 +38,17 @@
     }
   }
   .container {
+    height: 50px;
     background-color: @play-bg-color;
     .wrap {
       position: relative;
       display: flex;
-      padding: 8px 0;
+      // align-items: center;
+      padding-bottom: 10px;
       .btns {
         width: 137px;
-        padding-top: 6px;
+        margin-top: 8px;
+        padding-bottom: 6px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -78,7 +81,7 @@
       }
       .head {
         position: relative;
-        margin: 6px 15px 0 0;
+        margin: 9px 15px 0 0;
         img {
           width: 34px;
           height: 34px;
@@ -94,6 +97,9 @@
       .play {
         width: 608px;
         .words {
+          display: flex;
+          align-items: center;
+          margin-top: 6px;
           color: @white-color;
           min-height: 18px;
           text-shadow: 0 1px 0 @box-shadow-base;
@@ -106,15 +112,40 @@
             margin-right: 10px;
             cursor: pointer;
           }
+          .ellipsis {
+            color: #e8e8e8;
+            margin-top: 2px;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            cursor: pointer;
+            text-decoration: none;
+            text-shadow: 0 1px 0 #171717;
+            font-size: 12px;
+          }
           .songs {
             float: left;
             li {
               float: left;
+              a {
+                cursor: pointer;
+                font-size: 12px;
+                color: #9b9b9b;
+                &:hover {
+                  text-decoration: underline;
+                }
+              }
+              span {
+                color: #9b9b9b;
+              }
             }
           }
         }
         .bar {
           color: @white-color;
+          position: absolute;
+          bottom: 10px;
+          display: flex;
+          align-items: center;
           .slider-wrap {
             display: inline-block;
             width: 490px;
@@ -122,12 +153,26 @@
             vertical-align: bottom;
             padding: 8px 0;
           }
+          .time {
+            position: relative;
+            bottom: 2px;
+            font-size: 12px;
+            color: #797979;
+            text-shadow: 0 1px 0 #121212;
+            em,
+            i {
+              color: #a1a1a1;
+              font-style: normal;
+              text-align: left;
+              font-size: inherit;
+            }
+          }
         }
       }
       .oper {
         width: 60px;
         i {
-          margin: 11px 2px 0 0;
+          margin: 15px 2px 0 0;
           .icon("../images/playbar.png", 25px, 25px);
           &.like {
             background-position: -88px -163px;
@@ -147,8 +192,11 @@
         position: relative;
         width: 113px;
         padding-left: 13px;
+        margin-top: 6px;
+        display: flex;
+        align-items: center;
         i {
-          margin: 11px 2px 0 0;
+          // margin: 15px 2px 0 0;
           .icon("../images/playbar.png", 25px, 25px);
           &.volume {
             background-position: -2px -248px;
@@ -178,6 +226,7 @@
         .open {
           display: inline-block;
           cursor: pointer;
+          margin: 0 !important;
           span {
             display: block;
             text-align: center;
@@ -193,7 +242,7 @@
 
         .control-vol {
           position: absolute;
-          top: -128px;
+          top: -120px;
           left: 9px;
           padding: 14px;
           height: 120px;
